Some changes from code review.